---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2025-10-03
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-10-02
  Changes:
    - Updated dependencies to match new mod uploads
    - Fixed bismuth smelting with krastorio2
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-09-27
  Changes:
    - SEK2 combo fixes
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-09-27
  Features:
    - Updated to work with SE 0.7
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-09-23
  Features:
    - Updated to work with 2.0
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2023-11-9
  Features:
    - (K2) Buffed enriched bismuth
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2023-08-13
  Features:
    - Gave PCB solder a quite different tint to avoid confusing it with solder.. Downloading blender for making an actual model might be the next step to make this better
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2023-08-12
  Features:
    - Buffed bismuth glass and added a pyroflux version of the recipe
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2023-07-10
  Features:
    - Added bismuth in rubber if the mods bobselectronics or Rubber and Resin are enabled
    - (SE) Added sand to bismuth glass
    - Added pcb solder to bobselectronics, and to more recipes in general