@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
-Date: 2025-10-03
+Date: 2025-10-04
   Changes:
+    - Fixed Brasstacks dependency
+    - Fixed Krastorio2/K2Spacedout compat
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2025-10-02
